--- a/app/views/pages/actuamos.html.erb
+++ b/app/views/pages/actuamos.html.erb
@@ -1,13 +1,63 @@
 <div class="container">
-<p>Pues bien, ya es el momento de pasar a la acción o de volver a intentarlo. Hoy es diferente, hay una fisura en nuestra historia y nos la jugamos por nuestro país. </p>
+  <p class="my-3 text-justify">Sí, todos y todas hablamos de los múltiples problemas de nuestro país, pues bien, ya es el momento de <strong>pasar a la acción</strong> o de volver a intentarlo. Hoy es diferente, hoy hay una fisura en nuestra historia y hay una ventana de oportunidad para que nos la juguemos por nuestro país. <strong>O lo hacemos nosotr@s o nadie lo hará.</strong></p>
 
-<p>Para responder al por qué actuamos y para conseguir la meta del para qué actuamos, nos proponemos 4 formas de acción:</p>
-<ul>  
- <li><p>Actuemos desde la conciencia personal. En nuestra cotidianidad podemos construir país cuando no nos colamos en transmilenio, cuando recojemos los excrementos de nuestro perro, cuando respetamos al otro, cuando evitamos el atajo, y cuando no vemos al otro como competencia sino como compatriota.</p></li>
- <li><p>Actuemos desde la conciencia colectiva: actuamos con el pleno reconocimiento que el dolor ante lo injusto de nuestro país, la indignación sentida ante el abuso y el robo de los políticos profesionales y el sueño de cambio de un país para vivir mejor, no es solo individual sino que es compartido por la gran mayoría. Tu dolor es mi dolor y por ello, ante problemas colectivos, soluciones colectivas. Actuemos ha de relizar múltiples acciones virtuales y en calle con un alto contenido pedagógico para re-construir esa conciencia colectiva. Tal construcción colectiva pasa por desvelar una y otra vez que los políticos profesionales, esos que nos han gobernado, las mismas familias de siempre, no solo no van a cambiar sino que si los dejamos van a seguir desfalcando el país; pero también, de manera parela, debemos incentivar el reconocimiento de que el poder del cambio en está en nosotros mismos si es que lo asumimos como tal. El poder de ellos es grande si el nuestro es pequeño, pero si el de nosotros crece el de ellos disminuirá. En este país, o son ellos (los políticos profesionales, las mismas familias de siempre, los que se reparten el poder entre sí, la misma rosca de siempre, los ladroens de cuello blanco) o somos nosotros (los jóvenes, los estudiantes, los trabajadores, las mujeres, los empresarios, los que hemos pasado horas y días esperando una cita médica, los que vemos cómo la justicia o nunca llega o solo se le aplica a los que no tienen dienro ni poder, los que se nos van los días pasando hojas de vida o los que tenemos angustia de no saber si nos hacen contrato por una año más por prestación de servicios; los que sentimos que la plata no alcanza para los gastos del mes, los que vemos cómo es casi imposible tener una casa propia, los que nos da miedo a que nos roben en la calle; los que estamos endeudados y se nos va la plata del mes pagando educación y/o vivienda (…), en definitiva, la gente de a pie que queremos salir adelante, tener más oportunidades y vivir mejor en un país mejor).</p></li> 
- <li><p>Actuemos con vocación de poder: la toma de conciencia colectiva solo será efectiva si asumimos el reto de llegar a los espacios de poder del Estado. Actuemos es un instrumento para cambiar las instituciones del Estado a favor de la gente común. Pero solo eso es posible si es la misma gente común, como tú, la que llega a esos espacios de poder. No necesitamos más políticos profesionales que han vivido de la política, sino de gente que haga política para servir a los demás. Si no lo hacemos nosotros, juntos, ellos no lo harán.</p></li>
-</ul>
-</div>  
+  <div id="accordion" role="tablist" aria-multiselectable="true">
+    <div class="card">
+      <div class="card-header" role="tab" id="headingOne">
+        <h5 class="mb-0">
+          <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+            ¿Actuemos por qué?
+          </a>
+        </h5>
+      </div>
+  
+      <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne">
+        <div class="card-block">
+        Nuestra propuesta es evidente, es lo que nos dice el sentido común:
+        <ol>
+          <li>Porque no debemos permitir que los políticos profesionales sigan gobernando para que sigan robándose el país.</li>
+          <li>Y para ello debemos activarnos como sujetos políticos y juntarnos colectivamente los que queremos un país tan grande como nuestros sueños.</li>
+        </ol>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-header" role="tab" id="headingTwo">
+        <h5 class="mb-0">
+          <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+            ¿Actuemos para qué? 
+          </a>
+        </h5>
+      </div>
+      <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo">
+        <div class="card-block">
+          Para construir un país donde todos podamos vivir bien. Donde la felicidad no esté reservada solo para algunos apellidos. </p>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-header" role="tab" id="headingThree">
+        <h5 class="mb-0">
+          <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+            ¿Actuemos cómo?
+          </a>
+        </h5>
+      </div>
+      <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingThree">
+        <div class="card-block text-justify">
+          Para responder al por qué actuamos y para conseguir la meta del para qué actuamos, nos proponemos 3 formas de acción:
+    	    <ol>
+            <li>Actuemos desde la conciencia personal. Ya somos el cambio. En nuestra cotidianidad podemos construir país cuando no nos colamos en transmilenio, cuando recojemos los excrementos de nuestro perro, cuando respetamos al otro, cuando evitamos el atajo, cuando no vemos al otro como competencia sino como compatriota, etc.</li>  
+            <li>Actuemos desde la conciencia colectiva: actuamos con el pleno reconocimiento que el dolor ante lo injusto de nuestro país, la indignación sentida ante el abuso y el robo de los políticos profesionales y el sueño de cambio de un país para vivir mejor, no es solo individual sino que es compartido por la gran mayoría. Tu dolor es mi dolor y por ello, ante problemas colectivos, soluciones colectivas. Actuemos ha de relizar múltiples acciones virtuales y en calle con un alto contenido pedagógico para re-construir esa conciencia colectiva. Tal construcción colectiva pasa por desvelar una y otra vez que los políticos profesionales, esos que nos han gobernado, las mismas familias de siempre, no solo no van a cambiar sino que si los dejamos van a seguir desfalcando el país; pero también, de manera parela, debemos incentivar el reconocimiento de que el poder del cambio en está en nosotros mismos si es que lo asumimos como tal. El poder de ellos es grande si el nuestro es pequeño, pero si el de nosotros crece el de ellos disminuirá. </li>  
+            <li>Actuemos con vocación de poder: la toma de conciencia colectiva solo será efectiva si asumimos el reto de llegar a los espacios de poder del Estado. Actuemos es un instrumento para cambiar las instituciones del Estado a favor de la gente común. Pero solo eso es posible si es la misma gente común, como tú, la que llega a esos espacios de poder. No necesitamos más políticos profesionales que han vivido de la política, sino de gente que haga política para servir a los demás. Si no lo hacemos nosotros, juntos, ellos no lo harán.</li>
+          </ol>
+        </div>
+      </div>
+    </div>
+  </div>  
+
+</div>
+
 
 <!-- Suscripción mailchimp-->
 <section id="newsletter">
@@ -15,7 +65,7 @@
     <div class="row text-center">
       <div class="col-10 offset-1">
         <br>
-        <h4>Técnicas para que actuemos</h4>
+        <h4>Quiere recibir técnicas para que actuemos</h4>
         <br>
         <div class="form-group">
           <input type="email" class="form-control col-8 offset-2 text-center" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ingrese su e-mail">
