--- a/app/views/pages/hablemos.html.erb
+++ b/app/views/pages/hablemos.html.erb
@@ -1,7 +1,3 @@
-<div class="container">
-  <p class="text-justify my-3">Si quieres hacer parte del cambio, éstas decepcionado de la política tradicional,
-  tienes vocación de servicio y quieres hacer parte de la historia de Colombia, actívate ya en nuestra red y podemos ayudarte a crear tu video y promocionarlo.</p>
-</div>
 
 <div class="container text-justify">
   <div class="row">
@@ -14,9 +10,9 @@
     </div> 
     <div class="col-lg-6 col-md-6 text-center">
       <div class="feature">
-        <h3 class="text-uppercase">Investigador</h3>
-        <%= image_tag "investigador.png" %>
-        <p class="text-muted m-b-0">Aporta una publicación o estudio que permita mejorar la democracia y la convivencia </p>
+        <h3 class="text-uppercase">Voluntario</h3>
+        <%= image_tag "voluntario.png" %>
+        <p class="text-muted m-b-0">Adelanta diferentes tipos de acciones tales como investigación, actuación, acciones en calle, publicidad, difusion en redes sociales, organización, logística, entre otros.</p>
       </div>
     </div>
   </div>
@@ -25,15 +21,19 @@
       <div class="feature">
         <h3 class="text-uppercase">Gestor</h3>
         <%= image_tag "gestor.png" %>
-        <p class="text-muted m-b-0">Dona tiempo o dinero para hacer realidad eventos y proyectos de la plataforma</p>
+        <p class="text-muted m-b-0">Gestiona diferentes tipos de recurso para hacer sostenible el proyecto. Somos cuidadosos de lo que recibimos y de quién lo recibimos, ya que no vamos a entregar nuestra autonomía, ética y coherencia. Recibimos dinero o recursos materiales.</p>
       </div>
     </div>
     <div class="col-lg-6 col-md-6 text-center">
       <div class="feature">
-        <h3 class="text-uppercase">Seguidor</h3>
-        <%= image_tag "seguidor.png" %>
-        <p class="text-muted m-b-0">Participa en los debates para construir políticas públicas y ayuda a viralizar nuestros contenidos en redes sociales</p>
+        <h3 class="text-uppercase">Transformador</h3>
+        <%= image_tag "transformador.png" %>
+        <p class="text-muted m-b-0">Participa en los debates para construir políticas públicas y a ser multiplicador en diferentes ciudades. Lidera el cambio en tu casa, barrio, pueblo, ciudad.</p>
       </div>
     </div>
   </div>
+</div>
+
+<div class="container">
+  <p class="text-justify my-3">Si quieres hacer parte del cambio, estás decepcionado de la política tradicional, tienes vocación de servicio y quieres hacer parte de la historia de Colombia, actívate ya en nuestra red y PODEMOS AYUDARTE A CREAR TU VIDEO Y PROMOCIONARLO.</p>
 </div>
