--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,5 @@
 <%= render "layouts/welcome" %>
-<%= render "layouts/video" %>
+<%# render "layouts/video1" %>
+<%= render "layouts/video2" %>
+<%= render "layouts/video3" %>
 <%= render "layouts/footer" %>
