--- a/app/views/pages/seamos.html.erb
+++ b/app/views/pages/seamos.html.erb
@@ -6,9 +6,9 @@
     <div class="col-lg-6 text-justify">
       <h2 class="featurette-heading">Entendemos tus <span class="text-danger">problemas</span> y <span class="text-success">anhelos</span> </h2>
       <br>
-      <p>Somos ciudadanos comunes y corrientes, sin grandes apellidos, ni altos salarios, nos transportamos en bus o bicicleta, y al igual que tú sufrimos para acceder al sistema de salud y a un trabajo digno.</p>
-      <p>También estamos cansados de los políticos de siempre y de los partidos que no entienden ni viven los problemas, sueños, y anhelos de la gente de a pie, y cuyo interés no es el bienestar colectivo, sino su propio interés personal.</p>
-      <p>Esa es la razón por la que nos decidimos a realizar acciones contra dos GRANDES MALES de nuestra amada Colombia, como son  la corrupción de los que mandan y la indiferencia o impotencia de los que obedecen.</p>
+      <p>Somos ciudadanos <strong>comunes y corrientes</strong>, sin grandes apellidos, ni altos salarios, nos transportamos en bus o bicicleta, y al <strong>igual que tú</strong> sufrimos para acceder al sistema de salud y a un trabajo digno.</p>
+      <p>También estamos <strong>cansados de los políticos de siempre</strong> y de los partidos que no entienden ni viven los problemas, sueños, y anhelos de la gente de a pie, y cuyo interés no es el bienestar colectivo, sino su propio interés personal.</p>
+      <p>Esa es la razón por la que nos decidimos a realizar acciones contra dos GRANDES MALES de nuestra amada Colombia, como son  la <strong>corrupción</strong> de los que mandan y la <strong>indiferencia o impotencia</strong> de los que obedecen.</p>
     </div>
   </div>
 </div>
