--- a/app/views/pages/sonemos.html.erb
+++ b/app/views/pages/sonemos.html.erb
@@ -1,44 +1,18 @@
 <div class="container text-justify">
-  <br>
-  <p>Nuestros sueños sobre el país desbordan esta realidad que los políticos profesionales nos han creado y ofrecido, 
-  vivimos en una Colombia, cerrada, hostil, intolerante y excluyente. Esta es la oportunidad de que SOÑEMOS juntos y construyamos las mejores propuestas de la gente para la gente. </p>
+
+  <p class="my-3"><strong>Nuestros sueños</strong> sobre el país desbordan esta realidad que los políticos profesionales nos han creado y ofrecido, 
+  vivimos en una Colombia, cerrada, hostil, intolerante y excluyente. Esta es la <strong>oportunidad</strong> de que <strong>SOÑEMOS</strong> juntos y construyamos las mejores propuestas de la <strong>gente para la gente.</strong></p>
 
   <div class="row">
-    <div class="col-sm-6">
+    <div class="col-sm-12">
       <div class="card">
         <div class="card-block">
           <h3 class="card-title">Salud</h3>
           <p class="card-text">¿Cuál es el sistema de salud de nuestros sueños?</p>
           <a href="#" class="btn btn-primary">Participar</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-6">
-      <div class="card">
-        <div class="card-block">
-          <h3 class="card-title">Special title treatment</h3>
-          <p class="card-text">With supporting text below as a natural le.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-6">
-      <div class="card">
-        <div class="card-block">
-          <h3 class="card-title">Salud</h3>
-          <p class="card-text">¿Cuál es el sistema de salud de nuestros sueños?</p>
-          <a href="#" class="btn btn-primary">Participar</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-6">
-      <div class="card">
-        <div class="card-block">
-          <h3 class="card-title">Special title treatment</h3>
-          <p class="card-text">With supporting text below as a natunal content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
     </div>
   </div>
+
 </div>
