web stable client requeriment

--- a/app/views/layouts/_video1.html.erb
+++ b/app/views/layouts/_video1.html.erb
@@ -1,24 +1,22 @@
-<div class="container">
-  <div class="row">
-  	<article class="col my-3">
-    	<h3>Porque vivimos juntos, decidimos juntos</h3>
-    </article>
-  </div>
-	<div class="row">
-    <div class="col-md-4">
-      <div class="embed-responsive embed-responsive-4by3">
-        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/rC9Iu5zVGrA?rel=0" allowfullscreen></iframe>
-      </div>
-  	</div>
-    <div class="col-md-4">
-      <div class="embed-responsive embed-responsive-4by3">
-        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/fV4kqDZNSSk?rel=0" allowfullscreen></iframe>
-      </div>
-  	</div>
-  	<div class="col-md-4">
-      <div class="embed-responsive embed-responsive-4by3">
-        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/Y5giTuB-lIU?rel=0" allowfullscreen></iframe>
-      </div>
-  	</div>
+<div class="row text-center">
+  <div class="col">
+	  <h3 class="text-warning py-3 mb-0">Porque vivimos juntos, decidimos juntos</h3>
   </div>
 </div> 
+<div class="row">
+  <div class="col-md-4">
+    <div class="embed-responsive embed-responsive-4by3">
+      <iframe class="embed-responsive-item" src="//www.youtube.com/embed/rC9Iu5zVGrA?rel=0" allowfullscreen></iframe>
+    </div>
+	</div>
+  <div class="col-md-4">
+    <div class="embed-responsive embed-responsive-4by3">
+      <iframe class="embed-responsive-item" src="//www.youtube.com/embed/fV4kqDZNSSk?rel=0" allowfullscreen></iframe>
+    </div>
+	</div>
+	<div class="col-md-4">
+    <div class="embed-responsive embed-responsive-4by3">
+      <iframe class="embed-responsive-item" src="//www.youtube.com/embed/Y5giTuB-lIU?rel=0" allowfullscreen></iframe>
+    </div>
+	</div>
+</div>
