--- a/app/views/pages/hablemos.html.erb
+++ b/app/views/pages/hablemos.html.erb
@@ -1,3 +1,6 @@
+<div class="container">
+  <p class="text-justify my-3">Si quieres hacer parte del cambio, estás decepcionado de la política tradicional, tienes vocación de servicio y quieres hacer parte de la historia de Colombia, actívate ya en nuestra red y <strong>podemos ayudarte a crear tu video y promocionarlo.</strong></p>
+</div>
 
 <div class="container text-justify">
   <div class="row">
@@ -28,12 +31,8 @@
       <div class="feature">
         <h3 class="text-uppercase">Transformador</h3>
         <%= image_tag "transformador.png" %>
-        <p class="text-muted m-b-0">Participa en los debates para construir políticas públicas y a ser multiplicador en diferentes ciudades. Lidera el cambio en tu casa, barrio, pueblo, ciudad.</p>
+        <p class="text-muted m-b-0">Participa en los debates para construir políticas públicas y ser multiplicador en diferentes ciudades. Lidera el cambio en tu casa, barrio, pueblo, ciudad.</p>
       </div>
     </div>
   </div>
-</div>
-
-<div class="container">
-  <p class="text-justify my-3">Si quieres hacer parte del cambio, estás decepcionado de la política tradicional, tienes vocación de servicio y quieres hacer parte de la historia de Colombia, actívate ya en nuestra red y PODEMOS AYUDARTE A CREAR TU VIDEO Y PROMOCIONARLO.</p>
 </div>
