--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,8 @@
 <%= render "layouts/welcome" %>
-<%# render "layouts/video1" %>
-<%= render "layouts/video2" %>
-<%= render "layouts/video3" %>
+<%# render "layouts/vcarousel" %>
+<div class="container">
+  <%= render "layouts/video1" %>
+  <%= render "layouts/video2" %>
+  <%= render "layouts/video3" %>
+</div>
 <%= render "layouts/footer" %>
