--- a/app/views/pages/sonemos.html.erb
+++ b/app/views/pages/sonemos.html.erb
@@ -1,18 +1,74 @@
 <div class="container text-justify">
 
   <p class="my-3"><strong>Nuestros sueños</strong> sobre el país desbordan esta realidad que los políticos profesionales nos han creado y ofrecido, 
-  vivimos en una Colombia, cerrada, hostil, intolerante y excluyente. Esta es la <strong>oportunidad</strong> de que <strong>SOÑEMOS</strong> juntos y construyamos las mejores propuestas de la <strong>gente para la gente.</strong></p>
+  vivimos en una Colombia, cerrada, hostil, intolerante y excluyente. Esta es la <strong>oportunidad</strong> de que SOÑEMOS JUNTOS y construyamos las mejores propuestas de la <strong>gente para la gente.</strong></p>
 
-  <div class="row">
-    <div class="col-sm-12">
-      <div class="card">
-        <div class="card-block">
-          <h3 class="card-title">Salud</h3>
-          <p class="card-text">¿Cuál es el sistema de salud de nuestros sueños?</p>
-          <a href="#" class="btn btn-primary">Participar</a>
-        </div>
-      </div>
-    </div>
-  </div>
+  <table class="table">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>Categoria</th>
+        <th>Tema</th>
+        <th>Estado</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td>Mark</td>
+        <td>Otto</td>
+        <td>@mdo</td>
+      </tr>
+      <tr>
+        <th scope="row">2</th>
+        <td>Jacob</td>
+        <td>Thornton</td>
+        <td>@fat</td>
+      </tr>
+      <tr>
+        <th scope="row">3</th>
+        <td>Larry</td>
+        <td>the Bird</td>
+        <td>@twitter</td>
+      </tr>
+      <tr>
+        <th scope="row">3</th>
+        <td>Larry</td>
+        <td>the Bird</td>
+        <td>@twitter</td>
+      </tr>
+      <tr>
+        <th scope="row">3</th>
+        <td>Larry</td>
+        <td>the Bird</td>
+        <td>@twitter</td>
+      </tr>
+      <tr>
+        <th scope="row">3</th>
+        <td>Larry</td>
+        <td>the Bird</td>
+        <td>@twitter</td>
+      </tr>
+      <tr>
+        <th scope="row">3</th>
+        <td>Larry</td>
+        <td>the Bird</td>
+        <td>@twitter</td>
+      </tr>
+      <tr>
+        <th scope="row">3</th>
+        <td>Larry</td>
+        <td>the Bird</td>
+        <td>@twitter</td>
+      </tr>
+      <tr>
+        <th scope="row">3</th>
+        <td>Larry</td>
+        <td>the Bird</td>
+        <td>@twitter</td>
+      </tr>
+    </tbody>
+  </table>
 
 </div>
+
