--- a/app/views/layouts/_video2.html.erb
+++ b/app/views/layouts/_video2.html.erb
@@ -1,26 +1,22 @@
-<div class="container">  
-
-  <div class="row">
-  	<article class="col my-3">
-    	<h3>La red Actúa</h3>
-    </article>
+<div class="row text-center ">
+  <div class="col">
+  	<h3 class="text-info py-3 mb-0">La red Actúa</h3>
   </div>
-	<div class="row">
-    <div class="col-md-4">
-      <div class="embed-responsive embed-responsive-4by3">
-        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/rC9Iu5zVGrA?rel=0" allowfullscreen></iframe>
-      </div>
-  	</div>
-    <div class="col-md-4">
-      <div class="embed-responsive embed-responsive-4by3">
-        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/fV4kqDZNSSk?rel=0" allowfullscreen></iframe>
-      </div>
-  	</div>
-  	<div class="col-md-4">
-      <div class="embed-responsive embed-responsive-4by3">
-        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/nwJ_ozn37s8?rel=0" allowfullscreen></iframe>
-      </div>
-  	</div>
-  </div>
-  
-</div>  
+</div> 
+<div class="row">
+  <div class="col-md-4">
+    <div class="embed-responsive embed-responsive-4by3">
+      <iframe class="embed-responsive-item" src="//www.youtube.com/embed/rC9Iu5zVGrA?rel=0" allowfullscreen></iframe>
+    </div>
+	</div>
+  <div class="col-md-4">
+    <div class="embed-responsive embed-responsive-4by3">
+      <iframe class="embed-responsive-item" src="//www.youtube.com/embed/fV4kqDZNSSk?rel=0" allowfullscreen></iframe>
+    </div>
+	</div>
+	<div class="col-md-4">
+    <div class="embed-responsive embed-responsive-4by3">
+      <iframe class="embed-responsive-item" src="//www.youtube.com/embed/nwJ_ozn37s8?rel=0" allowfullscreen></iframe>
+    </div>
+	</div>
+</div>
