--- a/app/views/layouts/_video3.html.erb
+++ b/app/views/layouts/_video3.html.erb
@@ -1,26 +1,22 @@
-<div class="container">  
-
-  <div class="row">
-  	<article class="col my-3">
-    	<h3>Cuando la gente se decide a Actuar</h3>
-    </article>
+<div class="row text-center">
+  <div class="col">
+    <h3 class="text-danger py-3 mb-0">Cuando la gente se decide a Actuar</h3>
   </div>
-	<div class="row">
-    <div class="col-md-4">
-      <div class="embed-responsive embed-responsive-4by3">
-        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/lQn8poFjLmo?rel=0" allowfullscreen></iframe>
-      </div>
-  	</div>
-    <div class="col-md-4">
-      <div class="embed-responsive embed-responsive-4by3">
-        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/tsHyN9zj8_o?rel=0" allowfullscreen></iframe>
-      </div>
-  	</div>
-  	<div class="col-md-4">
-      <div class="embed-responsive embed-responsive-4by3">
-        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/VB6R-BgtCGM?rel=0" allowfullscreen></iframe>
-      </div>
-  	</div>
-  </div>
-  
-</div>  
+</div> 
+<div class="row">
+  <div class="col-md-4">
+    <div class="embed-responsive embed-responsive-4by3">
+      <iframe class="embed-responsive-item" src="//www.youtube.com/embed/lQn8poFjLmo?rel=0" allowfullscreen></iframe>
+    </div>
+	</div>
+  <div class="col-md-4">
+    <div class="embed-responsive embed-responsive-4by3">
+      <iframe class="embed-responsive-item" src="//www.youtube.com/embed/tsHyN9zj8_o?rel=0" allowfullscreen></iframe>
+    </div>
+	</div>
+	<div class="col-md-4">
+    <div class="embed-responsive embed-responsive-4by3">
+      <iframe class="embed-responsive-item" src="//www.youtube.com/embed/VB6R-BgtCGM?rel=0" allowfullscreen></iframe>
+    </div>
+	</div>
+</div>
