--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,38 +1,43 @@
-<nav class="navbar navbar-toggleable-md navbar-inverse overlay">
+  <nav class="navbar navbar-toggleable-md navbar-inverse overlay">
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation" >
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="container">
     <!--<%= image_tag("actuemos.svg", size: "100", class: "d-inline-block align-top") %>-->
     <strong><%= link_to "¡ A C T U E M O S !", root_path, class: "navbar-brand" %> </strong>
-  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-    <ul class="navbar-nav ml-auto mt-2 mt-md-0">
-      <li class="nav-item active">
-        <strong><%= link_to "SEAMOS", "/seamos", class: "nav-link" %></strong>
-        <span class="sr-only">(current)</span>
-      </li>
-      <li class="nav-item">
-        <strong><%= link_to "SOÑEMOS", "/sonemos", class: "nav-link" %></strong>
-      </li>
-      <li class="nav-item">
-        <strong><%= link_to "ACTUAMOS", "/actuamos", class: "nav-link" %></strong>
-      </li>
-      <li class="nav-item">
-        <strong><%= link_to "HABLEMOS", "/hablemos", class: "nav-link" %></strong>
-      </li>
-    </ul>
-  </div>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+      <ul class="navbar-nav ml-auto mt-2 mt-md-0">
+        <li class="nav-item active">
+          <strong><%= link_to "SEAMOS", "/seamos", class: "nav-link" %></strong>
+          <span class="sr-only">(current)</span>
+        </li>
+        <li class="nav-item">
+          <strong><%= link_to "SOÑEMOS", "/sonemos", class: "nav-link" %></strong>
+        </li>
+        <li class="nav-item">
+          <strong><%= link_to "ACTUAMOS", "/actuamos", class: "nav-link" %></strong>
+        </li>
+        <li class="nav-item">
+          <strong><%= link_to "HABLEMOS", "/hablemos", class: "nav-link" %></strong>
+        </li>
+      </ul>
+      <ul class="navbar-nav">
+        <% if user_signed_in? %>
+          <li class="nav-item">
+            <%= link_to 'PERFIL', edit_user_registration_path, :class => 'nav-link' %> 
+          </li>
+          <li class="nav-item">
+            <%= link_to "DESCONECTAR", destroy_user_session_path, method: :delete, class:"nav-link" %>
+          </li>
+        <% else %>
+          <li class="nav-item">
+          </li>
+            <%= link_to "REGISTRARSE", new_user_registration_path, class:"nav-link" %>
+          <li class="nav-item">
+            <%= link_to "INGRESAR", new_user_session_path, class:"nav-link" %>
+          </li>
+        <% end %>
+      </ul>
+    </div>
   </div>
 </nav>
-
-
-    <!--</ul>-->
-    <!--<ul class="navbar-nav float-right">-->
-    <!--  <% if user_signed_in? %>-->
-    <!--    <li class="nav-item"><%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> </li>-->
-    <!--    <li class="nav-item"><%= link_to "Desconectar", destroy_user_session_path, method: :delete, class:"nav-link" %></li>-->
-    <!--  <% else %>-->
-    <!--    <li class="nav-item active"><%= link_to "Registrarse", new_user_registration_path, class:"nav-link" %></li>-->
-    <!--    <li class="nav-item"><%= link_to "Conectar", new_user_session_path, class:"nav-link" %></li>-->
-    <!--  <% end %>-->
-    <!--</ul>-->
