--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,7 @@
 // Custom bootstrap variables must be set or imported *before* bootstrap.
+@import url('https://fonts.googleapis.com/css?family=Handlee'); // font-family: 'Handlee', cursive;
+@import url('https://fonts.googleapis.com/css?family=Architects+Daughter');//font-family: 'Architects Daughter', cursive;
+@import url('https://fonts.googleapis.com/css?family=Indie+Flower'); //font-family: 'Indie Flower', cursive;
 @import "bootstrap";
 @import "font-awesome";
 @import "pages";
