--- a/app/views/layouts/_welcome.html.erb
+++ b/app/views/layouts/_welcome.html.erb
@@ -1,13 +1,10 @@
-<section>
-  <%= image_tag "actuemos.svg", class: "img-fluid" %>
+<section id="cover">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-sm-10">
+        <h1 class="display-4"><strong>es el momento de la gente</strong></h1>
+        <h3>vive, decide y apoya la transformación de Colombia </h3>
+      </div>
+    </div>
+  </div>
 </section>
-<!--<section id="cover" class="overlay">-->
-<!--  <%= video_tag "video-bg.mp4", autoplay: :autoplay, loop: :loop, mute: :mute, id: "background" %>-->
-<!--  <div class="container">-->
-<!--    <div class="row justify-content-center">-->
-<!--      <div class="col-sm-10">-->
-<!--        <h1 class="display-4">VIVIMOS JUNTOS <br>DECIDIMOS JUNTOS</h1>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--  </div>-->
-<!--</section>-->
