--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,5 +16,6 @@
     <%= render "layouts/nav" %> 
     <%= render "layouts/notifications" %>
     <%= yield %>
+    <%= render "layouts/footer" %> 
   </body>
 </html>
