--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -3,11 +3,23 @@
   <!-- CONTACT HEADING -->
   <div class="row">
     <h2 class="section-heading">Contáctanos</h2>
-      <p class="section-subheading ">Por favor, rellene el siguiente formulario y nos pondremos en contacto con usted dentro de 24 horas. Esperamos escuchar de usted!</p>
+      <p class="section-subheading ">Si quieres ser parte de Actuemos por favor, rellene el siguiente formulario y nos pondremos en contacto con usted dentro de 24 horas. Esperamos escuchar de usted!</p>
   </div>
 
 <div class="container">
   <form>
+    <div class="form-group row">
+      <label for="inputEmail3" class="col-sm-2 col-form-label">Nombre y Apellido</label>
+      <div class="col-sm-10">
+        <input type="text" class="form-control" id="inputEmail3" placeholder="Nombre y Apellidos">
+      </div>
+    </div>
+    <div class="form-group row">
+      <label for="inputEmail3" class="col-sm-2 col-form-label">Ciudad</label>
+      <div class="col-sm-10">
+        <input type="text" class="form-control" id="inputEmail3" placeholder="Email">
+      </div>
+    </div>
     <div class="form-group row">
       <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
       <div class="col-sm-10">
@@ -20,6 +32,7 @@
         <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
       </div>
     </div>
+    
     <fieldset class="form-group row">
       <legend class="col-form-legend col-sm-2">Radios</legend>
       <div class="col-sm-10">
@@ -61,3 +74,32 @@
   </form>
 </div>
 </div>
+
+  <i class="fa fa-heartbeat fa-3x" aria-hidden="true"></i>
+  <i class="fa fa-graduation-cap fa-3x" aria-hidden="true"></i>
+  <i class="fa fa-suitcase fa-3x" aria-hidden="true"></i>
+  <i class="fa fa-gavel fa-3x" aria-hidden="true"></i>
+
+
+<a href="https://icons8.com">Icon pack by Icons8</a>
+
+podemos ayudarte a crear tu video y promocionarlo.
+
+<!-- Suscripción mailchimp-->
+<section id="newsletter">
+  <div class="container"> 
+    <div class="row text-center">
+      <div class="col-10 offset-1">
+        <br>
+        <h4>Quiere recibir técnicas para que actuemos</h4>
+        <br>
+        <div class="form-group">
+          <input type="email" class="form-control col-8 offset-2 text-center" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ingrese su e-mail">
+          <small id="emailHelp" class="form-text text-muted">Nunca compartiremos su correo electrónico con otra persona.</small>
+          <br>
+          <a class="btn btn-primary" href="#" role="button">Suscribirse</a>
+        </div>
+      </div>
+    </div>
+  </div>  
+</section>
