--- a/app/views/pages/hablemos.html.erb
+++ b/app/views/pages/hablemos.html.erb
@@ -1,38 +1,39 @@
 <div class="container">
-  <p class="text-justify my-3">Si quieres hacer parte del cambio, estás decepcionado de la política tradicional, tienes vocación de servicio y quieres hacer parte de la historia de Colombia, actívate ya en nuestra red y <strong>podemos ayudarte a crear tu video y promocionarlo.</strong></p>
-</div>
-
-<div class="container text-justify">
   <div class="row">
-    <div class="col-lg-6 col-md-6 text-center">
-      <div class="feature">
-        <h3 class="text-uppercase">Veedor</h3>
-        <%= image_tag "veedor.png" %>
-          <p class="text-muted m-b-0">Denuncia irregularidades, manifiesta tus inconformidades o conductas sospechosas en tú  barrio, trabajo, ciudad</p>
-      </div>
-    </div> 
-    <div class="col-lg-6 col-md-6 text-center">
-      <div class="feature">
-        <h3 class="text-uppercase">Voluntario</h3>
-        <%= image_tag "voluntario.png" %>
-        <p class="text-muted m-b-0">Adelanta diferentes tipos de acciones tales como investigación, actuación, acciones en calle, publicidad, difusion en redes sociales, organización, logística, entre otros.</p>
-      </div>
+    <div class="col-12 col-lg-6 text-justify">
+      <p class="my-2">Si quieres hacer parte del cambio, estás decepcionado de la política tradicional y tienes vocación de servicio, <u>actívate en nuestra red</u></p>
+      <ul class="list-unstyled">
+        <li class="media">
+      		<%= image_tag "veedor.png", size: "64", class:"d-flex mr-3" %>
+          <div class="media-body">
+            <h5 class="mt-0 mb-1">Veedor</h5>
+            <p>Denuncia irregularidades, manifiesta inconformidades o conductas sospechosas de tu comunidad o trabajo</p>
+          </div>
+        </li>
+        <li class="media my-4">
+          <%= image_tag "voluntario.png", size: "64", class:"d-flex mr-3" %>
+          <div class="media-body">
+            <h5 class="mt-0 mb-1">Voluntario</h5>
+            <p>Adelanta diferentes tipos de acciones de investigación, difusion en redes, logística, entre otros</p>
+          </div>
+        </li>
+        <li class="media">
+          <%= image_tag "gestor.png", size: "64", class:"d-flex mr-3" %>
+          <div class="media-body">
+            <h5 class="mt-0 mb-1">Gestor</h5>
+            <p>Administra recursos para hacer sostenible el proyecto, también puedes donar dinero o materiales</p>
+          </div>
+        </li>
+         <li class="media my-4">
+          <%= image_tag "transformador.png", size: "64", class:"d-flex mr-3" %>
+          <div class="media-body">
+            <h5 class="mt-0 mb-1">Transformador</h5>
+            <p>Participa en debates para construir políticas públicas y ser multiplicador en diferentes ciudades</p>
+          </div>
+        </li>
+      </ul>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-lg-6 col-md-6 text-center">
-      <div class="feature">
-        <h3 class="text-uppercase">Gestor</h3>
-        <%= image_tag "gestor.png" %>
-        <p class="text-muted m-b-0">Gestiona diferentes tipos de recurso para hacer sostenible el proyecto. Somos cuidadosos de lo que recibimos y de quién lo recibimos, ya que no vamos a entregar nuestra autonomía, ética y coherencia. Recibimos dinero o recursos materiales.</p>
-      </div>
-    </div>
-    <div class="col-lg-6 col-md-6 text-center">
-      <div class="feature">
-        <h3 class="text-uppercase">Transformador</h3>
-        <%= image_tag "transformador.png" %>
-        <p class="text-muted m-b-0">Participa en los debates para construir políticas públicas y ser multiplicador en diferentes ciudades. Lidera el cambio en tu casa, barrio, pueblo, ciudad.</p>
-      </div>
+    <div class="col-12 col-lg-6">
     </div>
   </div>
 </div>
