--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,6 +1,9 @@
-<div class="comment">
-  <p class="comment-content"><%= comment.content %></p>
-  <p class="comment-posted-by">By <%= comment.user.email %> <%= time_ago_in_words(comment.created_at) %> ago</p>
+<div class="media my-4">
+  <i class="fa fa-comments-o fa-3x d-flex mr-3" aria-hidden="true"></i>
+  <div class="media-body">
+    <h5 class="mt-0"><%= comment.user.email %> - <%= time_ago_in_words(comment.created_at) %></h5>
+    <%= comment.content %>
+  </div>
   <div class="links">
     <% if user_signed_in? %>
       <% if current_user.id == comment.user_id %>
