--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,5 +1,7 @@
 <%= form_for([@forum, @forum.comments.build], remote: true) do |form| %>
-	Your comment:<br>
-	<%= form.text_area :content, size: '50x10' %><br>
-	<%= form.submit %>
+<div class="form-group">
+	<%= form.text_area :content, size: "100x5", class: "form-control" %>
+</div>
+	<%= form.submit  class: "btn btn-primary" %>
 <% end %>
+<br>
