--- a/app/views/forums/index.html.erb
+++ b/app/views/forums/index.html.erb
@@ -1,31 +1,25 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Forums</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Topic</th>
-      <th>Question</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+<div class="container text-justify">
+  <p class="my-3"><strong>Nuestros sueños</strong> sobre el país desbordan esta realidad que los políticos profesionales nos han creado y ofrecido, 
+  vivimos en una Colombia, cerrada, hostil, intolerante y excluyente. Esta es la <strong>oportunidad</strong> de que SOÑEMOS JUNTOS y construyamos las mejores propuestas de la <strong>gente para la gente.</strong></p>
+  <%= link_to 'New Forum', new_forum_path %>
+  
+  <div class="row">
     <% @forums.each do |forum| %>
-      <tr>
-        <td><%= forum.topic %></td>
-        <td><%= forum.question %></td>
-        <td><%= forum.user %></td>
-        <td><%= link_to 'Show', forum %></td>
-        <td><%= link_to 'Edit', edit_forum_path(forum) %></td>
-        <td><%= link_to 'Destroy', forum, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+    <div class="col-sm-6 my-2">
+      <div class="card">
+        <div class="card-block">
+          <h3 class="card-title"><%= forum.topic %></h3>
+          <p class="card-text"><%= forum.question %></p>
+          <%= link_to 'Participar', forum, class:"btn btn-primary" %>
+          <%= link_to 'Editar', edit_forum_path(forum), class:"btn btn-warning" %>
+          <%= link_to 'Borrar', forum, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-danger"  %>
+        </div>
+      </div>
+    </div>
     <% end %>
-  </tbody>
-</table>
+  </div>
 
-<br>
+</div>  
 
-<%= link_to 'New Forum', new_forum_path %>
+
+
