--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,18 +1,7 @@
-<br>
-<hr class="my-3">
+<hr class="my-2">
 <div class="clearfix"></div>
 <footer class="text-center">
   <div class="container-fluid">
-    <!--<div class="row footer-above">-->
-    <!--  <div class="col-12">-->
-    <!--  	<ul class="list-unstyled list-inline footer-below">-->
-    <!--      <li class="list-inline-item"> <%=link_to_unless_current "Nosotros", root_path %></li> -->
-    <!--      <li class="list-inline-item"> <%=link_to_unless_current "Política de Privacidad", root_path %></li>-->
-    <!--      <li class="list-inline-item"> <%=link_to_unless_current "Condiciones del Servicio", root_path %></li>-->
-    <!--      <li class="list-inline-item"> <%=link_to_unless_current "Preguntas Frecuentes", root_path %></li>-->
-    <!--    </ul>-->
-    <!--  </div>-->
-    <!--</div>-->
     <div class="row">
       <div class="col-12"> 
         <p><h5>Copyright © 2017 - Actuemos │ Derechos Reservados</h5></p>
@@ -20,13 +9,13 @@
       <div class="col-12">
         <ul class="social list-unstyled list-inline">
          	<li class="list-inline-item"> 
-           	<a href="" class="btn btn-outline-fb btn-lg"><i class="fa fa-facebook"></i> Facebook</a>
+           	<a href="" class="btn btn-outline-fb btn-lg"><i class="fa fa-facebook"></i> facebook</a>
           </li>
           <li class="list-inline-item"> 
            	<a href="" class="btn btn-outline-yt btn-lg"><i class="fa fa-youtube"></i> youtube</a>
           </li>
           <li class="list-inline-item"> 
-           	<a href="" class="btn btn-outline-twitt btn-lg"><i class="fa fa-twitter"></i> twitter</a>
+           	<a href="https://twitter.com/actuemosinfo" class="btn btn-outline-twitt btn-lg"><i class="fa fa-twitter"></i> twitter</a>
           </li>
         </ul>
       </div>
