--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -12,7 +12,7 @@
           <span class="sr-only">(current)</span>
         </li>
         <li class="nav-item">
-          <strong><%= link_to "SOÑEMOS", "/sonemos", class: "nav-link" %></strong>
+          <strong><%= link_to "SOÑEMOS", forums_path, class: "nav-link" %></strong>
         </li>
         <li class="nav-item">
           <strong><%= link_to "ACTUAMOS", "/actuamos", class: "nav-link" %></strong>
