--- a/app/views/layouts/_video1.html.erb
+++ b/app/views/layouts/_video1.html.erb
@@ -1,6 +1,6 @@
-<div class="row text-center">
+<div class="row">
   <div class="col">
-	  <h3 class="text-warning py-3 mb-0">Porque vivimos juntos, decidimos juntos</h3>
+	  <h3 class="py-4 mb-0">Porque vivimos juntos, decidimos juntos</h3>
   </div>
 </div> 
 <div class="row">
