--- a/app/views/layouts/_video3.html.erb
+++ b/app/views/layouts/_video3.html.erb
@@ -1,6 +1,6 @@
-<div class="row text-center">
+<div class="row">
   <div class="col">
-    <h3 class="text-danger py-3 mb-0">Cuando la gente se decide a Actuar</h3>
+    <h3 class="py-4 mb-0">Cuando la gente se decide a Actuar</h3>
   </div>
 </div> 
 <div class="row">
