--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -1,6 +1,7 @@
 html,
 body {
   height: 100%;
+  font-family: 'Handlee', cursive;
 }
 
 p {
@@ -33,7 +34,7 @@ img {
 }
 
 .seamos-img {
-  background: image-url('ciudadano1.png');
+  background: image-url('ciudadano2.png');
   background-repeat: no-repeat;
   background-size: cover;
 }
