--- a/app/views/forums/index.html.erb
+++ b/app/views/forums/index.html.erb
@@ -1,6 +1,7 @@
 <div class="container text-justify">
-  <p class="my-3"><strong>Nuestros sueños</strong> sobre el país desbordan esta realidad que los políticos profesionales nos han creado y ofrecido, 
-  vivimos en una Colombia, cerrada, hostil, intolerante y excluyente. Esta es la <strong>oportunidad</strong> de que SOÑEMOS JUNTOS y construyamos las mejores propuestas de la <strong>gente para la gente.</strong></p>
+  <h2 class="my-3">Soñemos y construyamos las mejores propuestas de la gente para la gente</h2>
+  <p>Nuestros sueños sobre el país desbordan esta realidad que los políticos corruptos nos han creado y ofrecido, 
+  vivimos en una Colombia, cerrada, hostil, intolerante y excluyente; desde este espacio puedes opinar sobre los principales temas que afectan significativamente nuestras vidas.</p>
   <%= link_to 'New Forum', new_forum_path %>
   
   <div class="row">
@@ -10,9 +11,9 @@
         <div class="card-block">
           <h3 class="card-title"><%= forum.topic %></h3>
           <p class="card-text"><%= forum.question %></p>
-          <%= link_to 'Participar', forum, class:"btn btn-primary" %>
-          <%= link_to 'Editar', edit_forum_path(forum), class:"btn btn-warning" %>
-          <%= link_to 'Borrar', forum, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-danger"  %>
+          <%= link_to 'Participar', forum, class:"btn  btn-outline-primary" %>
+          <%= link_to 'Editar', edit_forum_path(forum), class:"btn btn-outline-warning" %>
+          <%= link_to 'Eliminar', forum, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-outline-danger"  %>
         </div>
       </div>
     </div>
