--- a/app/views/layouts/_video1.html.erb
+++ b/app/views/layouts/_video1.html.erb
@@ -1,6 +1,6 @@
 <div class="row overlay">
   <div class="col">
-	  <h3 class="py-4 mb-0 text-white text-center">Porque vivimos juntos, decidimos juntos</h3>
+	  <h3 class="py-5 mb-0 text-white text-center">PORQUE VIVIMOS JUNTOS, DECIDIMOS JUNTOS</h3>
   </div>
 </div> 
 <div class="row">
