--- a/app/views/layouts/_video2.html.erb
+++ b/app/views/layouts/_video2.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col">
-  	<h3 class="py-4 mb-0">La red Actúa</h3>
+  	<h3 class="py-5 mb-0 text-center">LA RED ACTÚA</h3>
   </div>
 </div> 
 <div class="row">
