--- a/app/views/layouts/_vcarousel.html.erb
+++ b/app/views/layouts/_vcarousel.html.erb
@@ -1,36 +1,31 @@
+<div class="container-fluid overlay text-white">
+  <div class="col">
+    <h3 class="py-4 mb-0 text-center overlay">Cuando la gente se decide a Actuar</h3>
+  </div>
+</div>  
+
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
       <div class="embed-responsive embed-responsive-16by9 col">
-        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
+        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/rC9Iu5zVGrA?rel=0" allowfullscreen></iframe>
       </div>
       <div class="embed-responsive embed-responsive-16by9 col">
-        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
+        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/fV4kqDZNSSk?rel=0" allowfullscreen></iframe>
       </div>
       <div class="embed-responsive embed-responsive-16by9 col">
-        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <div class="embed-responsive embed-responsive-16by9 col">
-        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
-      </div>
-      <div class="embed-responsive embed-responsive-16by9 col">
-        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
-      </div>
-      <div class="embed-responsive embed-responsive-16by9 col">
-        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
+        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/nwJ_ozn37s8?rel=0" allowfullscreen></iframe>
       </div>
     </div>
     <div class="carousel-item">
       <div class="embed-responsive embed-responsive-16by9 col">
-        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
+        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/lQn8poFjLmo?rel=0" allowfullscreen></iframe>
       </div>
       <div class="embed-responsive embed-responsive-16by9 col">
-        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
+        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/tsHyN9zj8_o?rel=0" allowfullscreen></iframe>
       </div>
       <div class="embed-responsive embed-responsive-16by9 col">
-        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
+        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/VB6R-BgtCGM?rel=0" allowfullscreen></iframe>
       </div>
     </div>
   </div>
